--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
 (executable
  (public_name real_estate_appraisal)
  (name main)
- (libraries real_estate_appraisal))
+ (libraries core core_unix.command_unix real_estate_appraisal))
