--- a/lib/dune
+++ b/lib/dune
@@ -1,3 +1,3 @@
 (library
  (name real_estate_appraisal)
- (libraries core cohttp lwt cohttp-lwt-unix lambdasoup))
+ (libraries core cohttp lwt cohttp-lwt-unix lambdasoup async))
