--- a/lib/dune
+++ b/lib/dune
@@ -1,5 +1,14 @@
 (library
  (name real_estate_appraisal)
- (libraries core cohttp lwt curl cohttp-lwt-unix lambdasoup async jsonaf)
+ (libraries
+  core
+  cohttp
+  lwt
+  curl
+  cohttp-lwt-unix
+  lambdasoup
+  async
+  jsonaf
+  )
  (preprocess
   (pps ppx_jane)))
